fixed height for add form on mobile, added alert for sign up

--- a/public/styles.css
+++ b/public/styles.css
@@ -256,7 +256,7 @@ legend {
 
 .add-asset-form {
 	background-color: #F5F5F5;
-	max-height: 100px;
+	max-height: 135px;
 	padding: 6px;
 	margin: 20px auto;
 	border-radius: 4px;
